DuPont DevSB/src/objects/dsfs__DocuSign_Envelope_Recipient__c.object
<CustomObject>
    <description>DocuSign Envelope Recipient</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>dsfs__Access_Code__c</fullName>
        <description>Access Code</description>
        <inlineHelpText>ACCESS CODE</inlineHelpText>
        <label>Access Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSER_ContactID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DocuSign Envelope Recipient Contact ID</description>
        <inlineHelpText>DOCUSIGN ENVELOPE RECIPIENT CONTACT ID</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DocuSign Envelope Recipient</relationshipLabel>
        <relationshipName>DocuSign_Envelope_Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__DSER_CustomFeaturesEx__c</fullName>
        <label>CustomFeaturesEx</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__DSER_CustomFeatures__c</fullName>
        <label>CustomFeatures</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSER_CustomId__c</fullName>
        <label>CustomId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSER_CustomName__c</fullName>
        <label>CustomName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSER_LeadID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DocuSign Envelope Recipient Lead ID</description>
        <inlineHelpText>DOCUSIGN ENVELOPE RECIPIENT LEAD ID</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DocuSign Envelope Recipient</relationshipLabel>
        <relationshipName>DocuSign_Envelope_Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__DSER_UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DocuSign Envelope Recipient User ID</description>
        <inlineHelpText>DOCUSIGN ENVELOPE RECIPIENT USER ID</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DocuSign_Envelope_Recipient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dsfs__DocuSign_EnvelopeID__c</fullName>
        <description>DocuSign Envelope ID</description>
        <inlineHelpText>DOCUSIGN ENVELOPE ID</inlineHelpText>
        <label>DocuSign Envelope</label>
        <referenceTo>dsfs__DocuSign_Envelope__c</referenceTo>
        <relationshipLabel>DocuSign Envelope Recipient</relationshipLabel>
        <relationshipName>DocuSign_Envelope_Recipient</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dsfs__DocuSign_Recipient_Role__c</fullName>
        <description>DocuSign Recipient Role</description>
        <inlineHelpText>DOCUSIGN RECIPIENT ROLE</inlineHelpText>
        <label>DocuSign Signer Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer 1</fullName>
                    <default>true</default>
                    <label>Customer 1</label>
                </value>
                <value>
                    <fullName>Customer 2</fullName>
                </value>
                <value>
                    <fullName>Company 1</fullName>
                </value>
                <value>
                    <fullName>Company 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dsfs__DocuSign_Signature_Name__c</fullName>
        <description>DocuSign Signature  Name</description>
        <inlineHelpText>DOCUSIGN SIGNATURE  NAME</inlineHelpText>
        <label>DocuSign Signature Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DocuSign_Signer_Type__c</fullName>
        <description>DocuSign Signer Type</description>
        <inlineHelpText>DOCUSIGN SIGNER TYPE</inlineHelpText>
        <label>DocuSign Signer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signer</fullName>
                    <default>true</default>
                    <label>Signer</label>
                </value>
                <value>
                    <fullName>Carbon Copy</fullName>
                </value>
                <value>
                    <fullName>Certified Delivery</fullName>
                </value>
                <value>
                    <fullName>Sign in person</fullName>
                </value>
                <value>
                    <fullName>Address recipients</fullName>
                </value>
                <value>
                    <fullName>Manage envelope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dsfs__Email_Body__c</fullName>
        <label>Email Body</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__ID_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>$ID Check</description>
        <inlineHelpText>$ID CHECK</inlineHelpText>
        <label>ID Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__LanguageCode__c</fullName>
        <description>2 Character language code.</description>
        <label>Language Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Language__c</fullName>
        <description>Friendly name.</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>dsfs__Recipient_Note_Long__c</fullName>
        <description>Note for Recipient</description>
        <inlineHelpText>Note for Recipient</inlineHelpText>
        <label>Recipient Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__Recipient_Note__c</fullName>
        <description>Note for Recipient</description>
        <inlineHelpText>NOTE FOR RECIPIENT</inlineHelpText>
        <label>Recipient Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__RoleName__c</fullName>
        <label>RoleName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__RoleValue__c</fullName>
        <description>Value associated with the DocuSign Recipient Role. This value is used to map to default anchor tags in documents.</description>
        <inlineHelpText>VALUE ASSOCIATED WITH THE DOCUSIGN RECIPIENT ROLE. THIS VALUE IS USED TO MAP TO DEFAULT ANCHOR TAGS IN DOCUMENTS.</inlineHelpText>
        <label>RoleValue</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Routing_Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Routing Order</description>
        <inlineHelpText>ROUTING ORDER</inlineHelpText>
        <label>Routing Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dsfs__Salesforce_Recipient_Type__c</fullName>
        <description>Salesforce Recipient Type</description>
        <inlineHelpText>SALESFORCE RECIPIENT TYPE</inlineHelpText>
        <label>Salesforce Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dsfs__SignInPersonEmail__c</fullName>
        <label>Sign In Person Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__SignInPersonName__c</fullName>
        <description>Name of person siging when Sign In Person is set.</description>
        <label>Sign In Person Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__SignNow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SignNow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__Validation_Message__c</fullName>
        <description>Validation Message</description>
        <inlineHelpText>VALIDATION MESSAGE</inlineHelpText>
        <label>Validation Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Envelope Recipient</label>
    <nameField>
        <displayFormat>DSER-{0000000}</displayFormat>
        <label>DocuSign Envelope Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Recipient</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>